# cli_example_app

./: README.md  pyproject.toml
cli_app/: __init__.py  __main__.py  cli.py
