[build-system]
requires = ["setuptools>= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_app_juns266"
dynamic = ["version"]
authors = [
    { name="Carlos Correa", email="carlosdcorrea3@gmail.com" }
]
description = "A distribution and deploy example for a cli python app"
readme = "README.md"
requires-python = ">3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Aproved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/CarlosDCorrea/cli_example_app.git"

[project.scripts]
cli-app = "cli_app:__main__:main"